--- a/0x02-tailwind-css/src/input.css
+++ b/0x02-tailwind-css/src/input.css
@@ -2,3 +2,8 @@
 @import "tailwindcss/preflight";
 @tailwind utilities;
 @tailwind utilities;
+
+@media (max-width: 768px)
+{
+main {grid-template-columns: 1fr;}
+}
